Continuación del EDA anteriormente adelantado

--- a/proyectoIAEnv/pyvenv.cfg
+++ b/proyectoIAEnv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\jacob\AppData\Local\Programs\Python\Python312
+home = C:\Users\JuanK\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.12.3
-executable = C:\Users\jacob\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\jacob\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\jacob\LaboratorioIA2\proyectoIAEnv
+version = 3.12.0
+executable = C:\Users\JuanK\LaboratorioIA2\proyectoIAEnv\Scripts\python.exe
+command = C:\Users\JuanK\LaboratorioIA2\proyectoIAEnv\Scripts\python.exe -m venv C:\Users\JuanK\LaboratorioIA2\proyectoIAEnv
